@@ -1096,16 +1096,24 @@ class FigureCanvasPS(FigureCanvasBase):
             isLandscape = True
             width, height = height, width
             bbox = (lly, llx, ury, urx)
-        temp_papertype = _get_papertype(width, height)
-        if papertype=='auto':
-            papertype = temp_papertype
-            paperWidth, paperHeight = papersize[temp_papertype]
+
+        # set the paper size to the figure size if isEPSF. The
+        # resulting ps file has the given size with correct bounding
+        # box so that there is no need to call 'pstoeps'
+        if isEPSF: 
+            paperWidth, paperHeight = self.figure.get_size_inches()
         else:
-            paperWidth, paperHeight = papersize[papertype]
-            if (width>paperWidth or height>paperHeight) and isEPSF:
+            temp_papertype = _get_papertype(width, height)
+            if papertype=='auto':
+                papertype = temp_papertype
                 paperWidth, paperHeight = papersize[temp_papertype]
-                verbose.report('Your figure is too big to fit on %s paper. %s \
-paper will be used to prevent clipping.'%(papertype, temp_papertype), 'helpful')
+            else:
+                paperWidth, paperHeight = papersize[papertype]
+                if (width>paperWidth or height>paperHeight) and isEPSF:
+                    paperWidth, paperHeight = papersize[temp_papertype]
+                    verbose.report('Your figure is too big to fit on %s paper. %s \
+    paper will be used to prevent clipping.'%(papertype, temp_papertype), 'helpful')
+
 
         texmanager = renderer.get_texmanager()
         font_preamble = texmanager.get_font_preamble()
@@ -1247,8 +1255,14 @@ your image.\nHere is the full report generated by ghostscript:\n\n' + fh.read())
     os.remove(outfile)
     os.remove(tmpfile)
     shutil.move(psfile, tmpfile)
-    if eps:
-        pstoeps(tmpfile, bbox)
+
+
+
+    # Since the the paper size is set to the figure size for eps
+    # output (in '_print_figure_tex'), pstoeps call is not required.
+
+    #if eps:
+    #    pstoeps(tmpfile, bbox)
 
 
 def xpdf_distill(tmpfile, eps=False, ptype='letter', bbox=None):
