@@ -1,5 +1,7 @@
 ======================================================================
 
+2009-04-28 Fixed incorrect bbox of eps output when usetex=True. - JJL
+
 2009-04-24 Changed use of os.open* to instead use subprocess.Popen.
            os.popen* are deprecated in 2.6 and are removed in 3.0. - RMM
 
